tests/valid/boolean_operators/gt_true.rs
/*
return: 1
*/

main(): int {
    return 1 > 0;
}