tests/invalid/boolean_operators/missing_mid_op.rs
/*
fail: 1
*/

main(): int {
    return 1 < > 3;
}